cursive-bootstrap/tests/ui/E-TYP/E-TYP-2050.cursive
// RUN: compile-fail
// DIAG: E-TYP-2050
// SPEC: 5.4
// DESC: Modal type declares zero states

modal Empty {  //~ ERROR E-TYP-2050: zero states
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
